<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Where Am I?</string>
  <string name="action_settings">Settings</string>
  <string name="title_section1">Current</string>
  <string name="title_section2">All</string>
  <string name="title_section3">Favorites</string>
  <string name="title_section4">Map</string>
  <string name="title_section5">Settings</string>
  <string name="title_section6">About</string>
  <string name="title_section7">Licences</string>
  <string name="MENU_FAVORITE">Toggle Favorite</string>
  <string name="MENU_SHARE">Share</string>
  <string name="MENU_RENAME">Rename</string>
  <string name="MENU_SHOW_ON_MAP">Show on map</string>
  <string name="MENU_AUDIO_NAV">Audio Navigation</string>
  <string name="MENU_DELETE">Delete</string>
  <string name="MENU_CANCEL">Cancel</string>
  <string name="BTN_SHARE">Share</string>
  <string name="BTN_SAVE">Save</string>
  <string name="LBL_LATITUDE">Latitude:</string>
  <string name="LBL_LONGITUDE">Longitude:</string>
  <string name="LBL_ALTITUDE">Altitude:</string>
  <string name="LBL_BEARING">Bearing:</string>
  <string name="LBL_SPEED">Speed:</string>
  <string name="LBL_ACCURACY">Accuracy:</string>
  <string name="LBL_PROVIDER">Provider:</string>
  <string name="LBL_UPDATES">Updates:</string>
  <string name="length_of_shared_message">Length of shared message</string>
  <string name="select_share_app">Select app to share with:</string>
  <string name="select_a_provider">Select a provider</string>
  <string name="settings_location">Location Settings:</string>
  <string name="onstartupdates">Start location updates when starting the application</string>
  <string name="backgroundupdates">Stop location updates when app is hidden (updates are always stopped when app is closed)</string>
  <string name="settingsapprestart">The following settings require an application restart.</string>
  <string name="settingusegps">Use GPS location provider</string>
  <string name="settingusenetwork">Use Network location provider</string>
  <string name="selectunitbelow">Unit Settings</string>
  <string name="distances">Distances</string>
  <string name="unit_metres">Metres</string>
  <string name="unit_km">Kilometres</string>
  <string name="unit_foot">Foot</string>
  <string name="unit_miles">Miles</string>
  <string name="unit_yards">Yards</string>
  <string name="velocities">Velocities</string>
  <string name="uni_mpers">m/s</string>
  <string name="unit_kmh">km/h</string>
  <string name="unit_mph">mph</string>
  <string name="angles">Angles</string>
  <string name="example_degree">0.0000 °</string>
  <string name="example_dms">00 ° 00\' 00\'\'</string>
  <string name="title">Title</string>
  <string name="distance">Distance:</string>
  <string name="distance_value">Distance Value</string>
  <string name="location_count">Location Count:</string>
  <string name="empty_count">0</string>
  <string name="shared_location">Shared Location</string>
  <string name="googlemaps">Google Maps</string>
  <string name="openstreetmap">OpenStreetMap</string>
  <string name="app_description">This app is a simple helper tool to create and manage private points of interest (POI).</string>
  <string name="app_load_warn_no_gps_no_wifi">GPS+Network location provider is not enabled!\n\nLocation updates will not work as specified in the settings.</string>
  <string name="app_load_warn_no_gps">GPS location provider is not enabled!\n\nLocation updates will not work as specified in the settings.</string>
  <string name="app_load_warn_no_wifi">Network location provider not enabled!\n\nLocation updates will not work as specified in the settings.</string>
  <string name="waiting_for_fix">Waiting for fix</string>
  <string name="enable_provider">Enable Provider</string>
  <string name="ok">OK</string>
  <string name="modify_the_name_below_">Modify the name below:</string>
  <string name="rename_location">Rename Location</string>
  <string name="do_you_really_want_to_delete_the_location_s_">Do you really want to delete the location \"%s\"?</string>
  <string name="select_action_">Select Action:</string>
  <string name="_no_location_fix_yet_">[no location fix yet]</string>
  <string name="no_location_yet">No location yet</string>
  <string name="failed_to_add_entry_to_db">Failed to add entry to db</string>
  <string name="added_entry_to_db">Added entry to db</string>
  <string name="cancel">Cancel</string>
  <string name="please_provide_a_name_for_this_location_">Please provide a name for this location:</string>
  <string name="save_location">Save location</string>
  <string name="_no_fix_">[no fix]</string><string name="save">Save</string>

</resources>