<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/CardRootSV">
  <LinearLayout style="@style/CardRootLL">
    <LinearLayout style="@style/CardBodyLL">
      <TextView
        style="@style/CardTitle"
        android:text="@string/settings_location"/>
      <View style="@style/CardHR"/>
      <CheckBox
        android:id="@+id/cbStartUpdates"
        style="@style/CardTextNormal"
        android:text="@string/onstartupdates"/>
      <CheckBox
        android:id="@+id/cbStopUpdates"
        style="@style/CardTextNormal"
        android:text="@string/backgroundupdates"/>
      <View style="@style/CardHR"/>
      <TextView
        android:id="@+id/textView1"
        style="@style/CardText"
        android:text="@string/settingsapprestart"/>
      <CheckBox
        android:id="@+id/cbUseGPS"
        style="@style/CardTextNormal"
        android:text="@string/settingusegps"/>
      <CheckBox
        android:id="@+id/cbUseNetwork"
        style="@style/CardTextNormal"
        android:text="@string/settingusenetwork"/>
    </LinearLayout>
    <LinearLayout style="@style/CardBodyLL">
      <TextView
        android:id="@+id/textView2"
        style="@style/CardTitle"
        android:text="@string/selectunitbelow"/>
      <View style="@style/CardHR"/>
      <TextView
        android:id="@+id/textView3"
        style="@style/CardText"
        android:text="@string/distances"/>
      <RadioGroup
        android:id="@+id/rbgLengths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
          android:id="@+id/rbMetres"
          style="@style/CardTextNormal"
          android:checked="true"
          android:text="@string/unit_metres"/>
        <RadioButton
          android:id="@+id/rbKilometres"
          style="@style/CardTextNormal"
          android:text="@string/unit_km"/>
        <RadioButton
          android:id="@+id/rbFoot"
          style="@style/CardTextNormal"
          android:text="@string/unit_foot"/>
        <RadioButton
          android:id="@+id/rbMiles"
          style="@style/CardTextNormal"
          android:text="@string/unit_miles"/>
        <RadioButton
          android:id="@+id/rbYards"
          style="@style/CardTextNormal"
          android:text="@string/unit_yards"/>
      </RadioGroup>
      <View style="@style/CardHR"/>
      <TextView
        android:id="@+id/textView4"
        style="@style/CardText"
        android:text="@string/velocities"/>
      <RadioGroup
        android:id="@+id/rbgVelocities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
          android:id="@+id/rbMetresPerSecond"
          style="@style/CardTextNormal"
          android:checked="true"
          android:text="@string/uni_mpers"/>
        <RadioButton
          android:id="@+id/rbKMH"
          style="@style/CardTextNormal"
          android:text="@string/unit_kmh"/>
        <RadioButton
          android:id="@+id/rbMPH"
          style="@style/CardTextNormal"
          android:text="@string/unit_mph"/>
      </RadioGroup>
      <View style="@style/CardHR"/>
      <TextView
        android:id="@+id/textView5"
        style="@style/CardText"
        android:text="@string/angles"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
      <RadioGroup
        android:id="@+id/rbgAngles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
          android:id="@+id/rbAngleDegrees"
          style="@style/CardTextNormal"
          android:checked="true"
          android:text="@string/example_degree"/>
        <RadioButton
          android:id="@+id/rbAngleDegreesMinutesSeconds"
          style="@style/CardTextNormal"
          android:text="@string/example_dms"/>
      </RadioGroup>
    </LinearLayout>
  </LinearLayout>
</ScrollView>